add_executable(alarm alarm.c)
add_executable(blockone blockone.c)
add_executable(cmdline cmdline.c)
add_executable(counterprob counterprob.c)
add_executable(fork fork.c)
add_executable(fork1 fork1.c)
add_executable(fork2 fork2.c)
add_executable(fork3 fork3.c)
add_executable(forkprob0 forkprob0.c)
add_executable(forkprob1 forkprob1.c)
add_executable(forkprob2 forkprob2.c)
add_executable(forkprob3 forkprob3.c)
add_executable(forkprob4 forkprob4.c)
add_executable(forkprob5 forkprob5.c)
add_executable(forkprob6 forkprob6.c)
add_executable(forkprob7 forkprob7.c)
add_executable(forkprob8 forkprob8.c)
add_executable(getpid getpid.c)
add_executable(08_hello hello.c)
add_executable(jmpbuf jmpbuf.c)
add_executable(kill kill.c)
add_executable(myecho myecho.c)
add_executable(orphan orphan.c)
add_executable(pg pg.c)
add_executable(pgchild pgchild.c)
add_executable(procmask procmask.c)
add_executable(procmask1 procmask1.c)
add_executable(procmask2 procmask2.c)
add_executable(psignal psignal.c)
add_executable(restart restart.c)
add_executable(rfork rfork.c)
add_executable(rfork-driver rfork-driver.c)
add_executable(shell shell.c)
add_executable(shellex shellex.c)

add_executable(sigbus sigbus.c)
add_executable(sigfpe sigfpe.c)
add_executable(sigint sigint.c)
add_executable(sigintsafe sigintsafe.c)
add_executable(signal1 signal1.c)
add_executable(signal2 signal2.c)
add_executable(signal3 signal3.c)
add_executable(signal4 signal4.c)
add_executable(signalprob0 signalprob0.c)
add_executable(sigsegv sigsegv.c)
add_executable(sigsuspend sigsuspend.c)

add_executable(stack stack.c)
add_executable(08_test.c test.c)
add_executable(waitforsignal waitforsignal.c)
add_executable(waitpid1 waitpid1.c)
add_executable(waitpid2 waitpid2.c)
add_executable(waitprob0 waitprob0.c)
add_executable(waitprob1 waitprob1.c)
add_executable(waitprob3 waitprob3.c)


add_executable(setjmp setjmp.c)
add_executable(p.08.05 hw/p.08.05.c)
add_executable(p.08.22 hw/p.08.22.c)
add_executable(p.08.24 hw/p.08.24.c)
add_executable(p.08.25 hw/p.08.25.c)
add_executable(p.08.26 hw/p.08.26.c)