


add_executable(dd2hex dd2hex.c)
add_executable(hex2dd hex2dd.c)
add_executable(hostinfo hostinfo.c)
add_executable(hostinfo-ntop hostinfo-ntop.c)
add_executable(echoserveri echoserveri.c echo.c)
add_executable(echoclient11 echoclient.c)



add_executable(p.01 hw/p.01.c)
add_executable(p.02 hw/p.02.c)
add_executable(p.03 hw/p.03.c)
add_executable(p.04 hw/p.04.c)
add_executable(p.tiny hw/p.tiny.c)
add_subdirectory(tiny)



